# queso

./: .gitignore  .travis.yml  Makefile.am  configure.ac
doxygen/: queso.dox.in
examples/: Makefile.am
examples/custom_tk/: hessian_eg.C  hessian_eg.h  hessian_eg_main.C
inc/queso/: Makefile.am
m4/: config_summary.m4
m4/common/: eigen.m4
manual/parallel/: parallel.tex
manual/users/: fdl.tex  users.tex  users_1_introduction.tex  users_2_installation.tex  users_3_classes.tex  users_4_remarks.tex  users_5_examples.tex  users_5a_example_sip.tex  users_5b_example_sfp.tex  users_5c_example_gravity.tex  users_5d_example_tga.tex  users_5e_example_ml_modal.tex  users_5f_example_ml_bimodal.tex  users_5g_example_ml_hysteretic.tex  users_8_fdl.tex  users_8_fdl_v1.2.tex  users_gsa.tex
src/: Makefile.am
src/contrib/libmesh/: Makefile.am  Makefile.in
src/contrib/libmesh/autom4te.cache/: output.0  output.3  requests  traces.0  traces.1  traces.2  traces.3
src/contrib/libmesh/contrib/autotools/lib/: libltdl.la  libltdl.so.7.3.1
src/contrib/libmesh/contrib/autotools/share/autoconf/: autom4te.cfg
src/contrib/libmesh/contrib/autotools/share/automake-1.15/Automake/: Config.pm
src/contrib/libmesh/contrib/autotools/share/emacs/site-lisp/: autoconf-mode.elc  autotest-mode.elc
src/contrib/libmesh/contrib/autotools/share/info/: dir
src/contrib/libmesh/contrib/autotools/share/man/man1/: aclocal-1.15.1  automake-1.15.1
src/contrib/libmesh/contrib/eigen/3.2.1/: Makefile
src/contrib/libmesh/contrib/netcdf/4.3.1/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2  traces.3
src/contrib/libmesh/contrib/netcdf/4.4.1.1/autom4te.cache/: output.0  requests  traces.0  traces.1
src/contrib/libmesh/contrib/netcdf/4.4.1.1/libsrc/: putget.c
src/contrib/libmesh/doc/man/man3/: APIStructs.3  DM_libMesh.3  EXTERN_C_FOR_PETSC_END.3  ElemDataStrings.3  ErrorReturnCodes.3  FileOptions.3  FileVars.3  GETPOT_NAMESPACE.3  GETPOT_NAMESPACE_GetPot.3  GETPOT_NAMESPACE_GetPot_ltstr.3  GETPOT_NAMESPACE_GetPot_variable.3  GMVLib.3  LIBMESH_DEFINE_HASH_POINTERS.3  LIBMESH_DEFINE_HASH_POINTERS_FuzzyPointCompare.3  Metis.3  Papi.3  Parmetis.3  Pred.3  Sfc.3  StringLengths.3  _scratch_damon_git_github_libmesh_include_.3  _scratch_damon_git_github_libmesh_include_libmesh_.3  _scratch_damon_git_github_libmesh_src_.3  _scratch_damon_git_github_libmesh_src_base_.3  _scratch_damon_git_github_libmesh_src_error_estimation_.3  _scratch_damon_git_github_libmesh_src_fe_.3  _scratch_damon_git_github_libmesh_src_geom_.3  _scratch_damon_git_github_libmesh_src_mesh_.3  _scratch_damon_git_github_libmesh_src_numerics_.3  _scratch_damon_git_github_libmesh_src_parallel_.3  _scratch_damon_git_github_libmesh_src_partitioning_.3  _scratch_damon_git_github_libmesh_src_quadrature_.3  _scratch_damon_git_github_libmesh_src_solvers_.3  _scratch_damon_git_github_libmesh_src_systems_.3  _scratch_damon_git_github_libmesh_src_utils_.3  abaqus_io.C.3  abaqus_io.h.3  adaptive_time_solver.C.3  adaptive_time_solver.h.3  adjoint_refinement_estimator.C.3  (+1345 more)
src/contrib/libmesh/include/: Makefile.am  Makefile.in  include_HEADERS
src/contrib/libmesh/include/libmesh/: Makefile.am  Makefile.in  derived_rb_construction.h  derived_rb_evaluation.h  elem_type.h  linear.h  petsc_dm_nonlinear_solver.h  quadrature_rules.h  rebuild_makefile.sh  solver.h
src/contrib/libmesh/include/numerics/: distributed_vector.h  eigen_block_sparse_matrix.h  eigen_sparse_matrix.h  eigen_sparse_vector.h  numeric_vector.h  sparse_matrix.h
src/contrib/libmesh/include/parallel/: parallel.h  parallel_implementation.h
src/contrib/libmesh/include/partitioning/: metis_partitioner.h
src/contrib/libmesh/src/: libmesh_SOURCES
src/contrib/libmesh/src/base/: libmesh.C
src/contrib/libmesh/src/numerics/: distributed_vector.C  eigen_block_sparse_matrix.C  eigen_sparse_matrix.C  eigen_sparse_vector.C  sparse_matrix.C
src/contrib/libmesh/src/partitioning/: linear_partitioner.C
test/: Makefile.am
test/custom_tk/: adaptive_metropolis.C  adaptive_metropolis.h  adaptive_metropolis_main.C
test/t01_valid_cycle/: TgaValidationCycle_gsl.C
test/t02_sip_sfp/: example_compute.C  example_likelihood.C  example_likelihood.h  example_qoi.C  example_qoi.h
test/t04_bimodal/: example_compute.C  example_likelihood.C  example_likelihood.h
test/test_BaseScalarFunction/: test_fd_fallback.C
test/test_Environment/: test_serialEnv.C
test/test_GaussianVectorRVClass/: test_VectorPdf_gsl.C  test_VectorRV_gsl.C  test_VectorRealizer_gsl.C  test_uqGaussianVectorRVClass.C
test/test_GslBlockMatrix/: test_GslBlockMatrixInvertMultiply.C
test/test_GslMatrix/: test_uqGslMatrix.C
test/test_GslVector/: test_uqGslVector.C
test/test_GslVectorSpace/: test_GslVectorSpaceMisc.C
test/test_InterpolationSurrogate/: test_1D_LinearLagrangeInterpolationSurrogate.C  test_2D_LinearLagrangeInterpolationSurrogate.C  test_3D_LinearLagrangeInterpolationSurrogate.C  test_4D_LinearLagrangeInterpolationSurrogate.C  test_build_InterpolationSurrogateBuilder.C
test/test_IntersectionSubset/: test_IntersectionSubsetContains.C
test/test_Regression/: test_GaussianMean1DRegression.C  test_gpmsa_cobra.C  test_jeffreys.C  test_logitadaptedcov.C
test/test_SequenceOfVectors/: test_HDF5Write.C  test_SequenceOfVectorsErase.C  test_unifiedPositionsOfMaximum.C
test/test_StatisticalInverseProblem/: test_NoInputFile.C  test_no_initial_point.C  test_parallel_h5.C
test/test_algorithms/: test_mala.C
test/test_centroids/: test_boxsubset_centroid.C  test_concatenation_centroid.C
test/test_gaussian_likelihoods/: test_blockDiagonalCovariance.C  test_blockDiagonalCovarianceChain.C  test_blockDiagonalCovarianceRandomCoefficients.C  test_diagonalCovariance.C  test_diagonalCovarianceChain.C  test_fullCovariance.C  test_fullCovarianceChain.C  test_fullCovarianceRandomCoefficient.C  test_scalarCovariance.C  test_scalarCovarianceChain.C
test/test_gpmsa/: mv_pdf_large.sh  pdf_small.C  scalar_pdf_large.C  scalar_pdf_small.C  test_gpmsa_autoscaled_samples.m  test_gpmsa_functional.C  (+2 more)
(+197 files in other folders)
